--- a/src/index.css
+++ b/src/index.css
@@ -40,9 +40,15 @@ code {
 .description {
   text-transform: capitalize;
 }
+
+.weather {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .weatherUnitContainer {
   display: flex;
-  /* flex-direction: column; */
   flex-wrap: wrap;
   gap: 1rem;
   justify-content: center;
